--- a/content/docs/products/database/index.mdx
+++ b/content/docs/products/database/index.mdx
@@ -13,7 +13,7 @@ Every Supabase project comes with a full [Postgres](https://www.postgresql.org/)
 
 You don't have to be a database expert to start using Supabase. Our table view makes Postgres as easy to use as a spreadsheet.
 
-{/* ![Table View.](/docs/img/table-view.png) */}
+![Table View.](/docs/img/table-view.png)
 
 ### Relationships
 
