--- a/content/docs/products/database/orioledb.mdx
+++ b/content/docs/products/database/orioledb.mdx
@@ -8,20 +8,18 @@ The [OrioleDB](https://www.orioledb.com/) Postgres extension provides a drop-in 
 
 OrioleDB addresses PostgreSQL's scalability limitations by removing bottlenecks in the shared memory cache under high concurrency. It also optimizes write-ahead-log (WAL) insertion through row-level WAL logging. These changes lead to significant improvements in the industry standard TPC-C benchmark, which approximates a real-world transactional workload. The following benchmark was performed on a c7g.metal instance and shows OrioleDB's performance outperforming the default PostgreSQL heap method with a 3.3x speedup.
 
-```
 <Image
   alt="TPC-C (warehouses = 500)"
   src="/docs/img/database/orioledb-tpc-c-500-warehouse.png"
   className="max-w-[550px] !mx-auto border rounded-md"
   zoomable
 />
-```
 
-{/* <Admonition type="note"> */}
+<Admonition type="note">
 
 OrioleDB is in active development and currently has [certain limitations](https://www.orioledb.com/docs/usage/getting-started#current-limitations). Currently, only B-tree indexes are supported, so features like pg_vector's HNSW indexes are not yet available. An Index Access Method bridge to unlock support for all index types used with heap storage is under active development. In the Supabase OrioleDB image the default storage method has been updated to use OrioleDB, granting better performance out of the box.
 
-{/* </Admonition> */}
+</Admonition>
 
 ## Concepts
 
@@ -48,7 +46,6 @@ OrioleDB implements copy-on-write checkpoints to persist data efficiently. This 
 You can get started with OrioleDB by enabling the extension in your Supabase dashboard.
 To get started with OrioleDB you need to [create a new Supabase project](https://supabase.com/dashboard/new/_) and choose `OrioleDB Public Alpha` Postgres version.
 
-```
 <Image
   alt="Creating OrioleDB project"
   src={{
@@ -58,7 +55,6 @@ To get started with OrioleDB you need to [create a new Supabase project](https:/
   className="max-w-[550px] !mx-auto border rounded-md"
   zoomable
 />
-```
 
 ### Creating tables
 
@@ -82,11 +78,11 @@ create table blog_post (
 OrioleDB tables always have a primary key. If it wasn't defined explicitly, a hidden primary key is created using the `ctid` column.
 Additionally you can create secondary indexes.
 
-{/* <Admonition type="note"> */}
+<Admonition type="note">
 
 Currently, only B-tree indexes are supported, so features like pg_vector's HNSW indexes are not yet available.
 
-{/* </Admonition> */}
+</Admonition>
 
 ```sql
 -- Create an index
